<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
  
    <groupId>com.aeongames</groupId>
    <artifactId>StegsolvePlus</artifactId>
    <version>0.6.0-SNAPSHOT</version>
    <name>StegnoSolverPlus</name>
    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.*</include>
                    <include>com/aeongames/stegsolveplus/text/app.properties</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.aeongames.stegsolveplus.app.Entry</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
    </properties>
  
    <dependencies>
        <dependency>
            <groupId>com.aeongames.edi.utils.pojo</groupId>
            <artifactId>AeonPojoBindLib</artifactId>
            <version>1.2-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.aeongames.edi.utils</groupId>
            <artifactId>AeonEdUtils</artifactId>
            <version>1.2-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.drewnoakes</groupId>
            <artifactId>metadata-extractor</artifactId>
            <version>2.19.0</version>
        </dependency>
        <dependency>
            <groupId>org.pushing-pixels</groupId>
            <artifactId>radiance-common</artifactId>
            <version>8.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.pushing-pixels</groupId>
            <artifactId>radiance-theming</artifactId>
            <version>8.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.pushing-pixels</groupId>
            <artifactId>radiance-component</artifactId>
            <version>8.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.13.1</version>
        </dependency>
    </dependencies>
    
</project>